# mpi_tp2

./: .gitmodules  CMakeLists.txt  test.c
inc/: mandelbrot.h  mandelbrot_dynamic.h  mandelbrot_static.h
lib/: CMakeLists.txt  mandelbrot.c  mandelbrot_static.c
src/: CMakeLists.txt  m_dynamic.c  m_serial.c  m_static.c
